# menu-analizer

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
models/: menu.py
web/: index.html  script.js  style.css
